# range

./: .gitignore  CMakeLists.txt
cmake/: range_version.cmake
range/: core.hpp  import.hpp  range.hpp  wrap.hpp
test/: adjacent_find_test.cpp  all_of_test.cpp  any_of_test.cpp  binary_search_test.cpp  copy_backward_test.cpp  copy_if_test.cpp  copy_test.cpp  count_if_test.cpp  count_test.cpp  equal_range_test.cpp  equal_test.cpp  fill_test.cpp  find_end_test.cpp  find_first_of.cpp  find_first_of_test.cpp  find_if_not_test.cpp  find_if_test.cpp  find_test.cpp  for_each_test.cpp  generate_test.cpp  includes_test.cpp  inplace_merge_test.cpp  is_heap_until_test.cpp  is_partitioned_test.cpp  is_permutation_test.cpp  is_sorted_test.cpp  is_sorted_until_test.cpp  lexicographical_compare_test.cpp  lower_bound_test.cpp  make_heap_test.cpp  max_element_test.cpp  merge_test.cpp  min_element_test.cpp  minmax_element_test.cpp  mismatch_test.cpp  move_backward_test.cpp  move_test.cpp  next_permutation_test.cpp  none_of_test.cpp  nth_element_test.cpp  (+38 more)
